--- a/appcast.json
+++ b/appcast.json
@@ -2,6 +2,12 @@
   "identifier": "enconvo.explain-code",
   "versions": [
     {
+      "version": "0.0.3",
+      "desc": "Bump version to 0.0.3",
+      "url": "https://github.com/ysnows/enconvo.explain-code/releases/download/v0.0.3/enconvo.explain-code.enconvoplugin",
+      "minAppVersion": "1.1.8"
+    },
+    {
       "version": "0.0.2",
       "desc": "Bump version to 0.0.2",
       "url": "https://github.com/ysnows/enconvo.pros-cons/releases/download/v0.0.2/enconvo.pros-cons.enconvoplugin",
